  with the views folder as base
- fix bug in KeepItSimple theme's local.php; b:#2879221
- fix bug in ZMFileUtils; b:#2880149
- fix file permission bug; b:#2880151
- update theme infos and add preview images
- allow to set custom preview image with ZMThemeInfo::setPreview('image');
  default is 'preview.jpg'
- zm_theme_switch: if no config setting is found, display all existing themes

Release 0.9.7
- add ZMProductAssociation service and related code
- Move zm_token plugin into core
- removed zm_product_associations plugin
- add support for initQuery parameter to ZMDatabase (and ZMRuntime::getDatabase())
- add ZMSimilarOrderProductAssociationHandler and new setting 'defaultProductAssociationHandler'
- start migration of code into new lib folder
- zm_firephp: fix issue with logging after response already written
- reorganize setting names; format for custom database fields is now: 
  'zenmagick.core.database.sql.[table].customFields',
  'zenmagick.core.authentication.minPasswordLength' now has a default of 8 if
  not set
- update demo theme with new(er) json2.js script from json.org
- fix missing 'new' in ZMProductSorter.php
- zm_auto_login: refresh cookie on onZMFinaliseContents rather onZMAllDone;
  can't update headers after content has been sent!
- zm_auto_login: change to always use token service; this might invalidate old
  cookies and force users to login again (once)
- remove obsolete bootstrap.php
- split ZMRuntime - all store code now uses Runtime
- zm_goggle_analytics: fix conversion URL (missing '/')
- move responsibility for model data from ZMController to ZMView [deprecate
  exportGlobal() and getGlobals()]
- change all templates to use $this rather than $zm_view; remove $zm_view
- move (and split) ZMPlugin; store and all plugins now use Plugin as base
  class
- move and split ZMPlugins and make it regular service, rather than a
  container of static methods to make it easier to extend