@@ -1,3 +1,7 @@
+## plugins to build by type
+plugins.type.request = zm_google_adsense,zm_google_analytics,zm_useo2,zm_useo3,zm_imagehandler2,zm_captcha,zm_product_music_info,zm_crossell,zm_google_store_locator,zm_master_password,zm_recaptcha,zm_phpbb2,zm_pretty_links,zm_page_cache,zm_site_switch,zm_hoverbox3,zm_page_stats,zm_multi_qty,zm_cron,zm_openid,zm_wordpress,zm_dual_pricing,zm_tests,zm_auto_login,zm_geo_ip,zm_ssu,zm_firephp,zm_whos_online,zm_phpbb3,zm_form_handler,zm_theme_switch,zm_settings,zm_toggle_zm_themes,zm_deprecated,zm_fual_slimbox,zm_vbulletin,zm_subscriptions,
+plugins.type.order_total = zm_payment_surcharge,
+
 ## plugin version numbers
 plugins.zm_google_adsense.version = 0.4.4
 plugins.zm_google_analytics.version = 0.6.0
@@ -17,7 +21,6 @@ plugins.zm_phpbb2.version = 0.2.4
 plugins.zm_pretty_links.version = 0.2.4
 plugins.zm_page_cache.version = 0.3.4
 plugins.zm_site_switch.version = 0.2.5
-plugins.zm_quick_edit.version = 0.4.0
 plugins.zm_hoverbox3.version = 0.2.4
 plugins.zm_page_stats.version = 0.3.0
 plugins.zm_multi_qty.version = 0.1.4
