@@ -16,6 +16,8 @@ Release 0.9.8
 - allow to set custom preview image with ZMThemeInfo::setPreview('image');
   default is 'preview.jpg'
 - zm_theme_switch: if no config setting is found, display all existing themes
+- modify plugin build script to make plugins.properties only file to be
+  changed for new plugins (except new groups)
 
 Release 0.9.7
 - add ZMProductAssociation service and related code
